feat: add new endpoint to pagination
Update .dockerignore

Update .dockerignore

build: remove tests to compile

fix: remove route to get all items
